--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,3 +7,42 @@ requires-python = ">=3.13"
 dependencies = [
     "fastapi[standard]>=0.116.1",
 ]
+
+[dependency-groups]
+dev = [
+    "pytest>=8.4.1",
+    "pytest-cov>=6.2.1",
+    "ruff>=0.12.5",
+    "taskipy>=1.14.1",
+]
+
+
+### Ruff ###
+[tool.ruff]
+line-length = 79
+extend-exclude = ['migrations']
+
+[tool.ruff.lint]
+preview = true
+select = ['I', 'F', 'E', 'W', 'PL', 'PT']
+
+[tool.ruff.format]
+preview = true
+quote-style = 'single'
+
+
+### Pytest ###
+[tool.pytest.ini_options]
+pythonpath = "."
+addopts = '-p no:warnings'
+
+
+### Taskipy ###
+[tool.taskipy.tasks]
+lint = 'ruff check'
+pre_format = 'ruff check --fix'
+format = 'ruff format'
+run = 'fastapi dev bagual_list/app.py'
+pre_test = 'task lint'
+test = 'pytest -s -x --cov=bagual_list -vv'
+post_test = 'coverage html'
