--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,12 +28,13 @@ select = ['I', 'F', 'E', 'W', 'PL', 'PT']
 
 [tool.ruff.format]
 preview = true
-quote-style = 'single'
+quote-style = 'double'
 
 
 ### Pytest ###
 [tool.pytest.ini_options]
-pythonpath = "."
+pythonpath = ["."]
+testpaths = ["tests"]
 addopts = '-p no:warnings'
 
 
